estilização inputs,labels e placeholder

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ h1 {
 }
 
 @media only screen and (max-width: 600px) {
+
   .botoes,
   .botoes button {
     width: 100%;
@@ -115,38 +116,69 @@ h1 {
 
 .modal-despesa,
 .modal-receita {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0,0.4);
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0, 0.4);
 }
 
 .conteudo-despesa,
- .conteudo-receita{
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border-radius: 8px;
-    width:70%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.conteudo-receita {
+  background-color: #fff;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 8px;
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .botoes .btn-adicionar-despesa,
 .botoes .btn-adicionar-receita {
-    background-color: #E02B57;
-    color: #fff;
-  }
+  background-color: #E02B57;
+  color: #fff;
+}
 
 
-  .botoes .btn-cancelar-despesa,
-  .botoes .btn-cancelar-receita {
-    background-color: #fff;
-    color: #E02B57;
-  }
+.botoes .btn-cancelar-despesa,
+.botoes .btn-cancelar-receita {
+  background-color: #fff;
+  color: #E02B57;
+}
+
+#nome-receita,
+#nome-despesa,
+#valor-receita,
+#valor-despesa{
+  outline:none;
+  border:none;
+  width: 100%;
+  text-align: center;
+  background-color: #F5F6FA;
+  padding: 16px 0;
+  border-radius: 8px;
+  margin-bottom: 40px;
+}
+
+#nome-receita::placeholder,
+#nome-despesa::placeholder,
+#valor-receita::placeholder,
+#valor-despesa::placeholder{
+    font-size:16px;
+}
+
+.conteudo-despesa label,
+.conteudo-receita label{
+  width:100%;
+  text-align: center;
+  font-size:20px;
+  padding: 8px 0;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
